logs/corextext.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/corexcontinuous'...
Compiling './lib/python3.5/site-packages/corexcontinuous/corex_continuous.py'...
***   File "./lib/python3.5/site-packages/corexcontinuous/corex_continuous.py", line 29
    model: corex_cont.Corex
         ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/corexcontinuous/linearcorex'...
Listing './lib/python3.5/site-packages/corexcontinuous/linearcorex/linearcorex'...
Compiling './lib/python3.5/site-packages/corexcontinuous/linearcorex/vis_corex.py'...
***   File "./lib/python3.5/site-packages/corexcontinuous/linearcorex/vis_corex.py", line 49
    print 'Pairwise plots among high TC variables in "relationships"'
                                                                    ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/corexdiscrete'...
Compiling './lib/python3.5/site-packages/corexdiscrete/corex_discrete.py'...
***   File "./lib/python3.5/site-packages/corexdiscrete/corex_discrete.py", line 28
    model: corex_disc.Corex
         ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/corexdiscrete/corexdiscrete'...
Compiling './lib/python3.5/site-packages/corexdiscrete/corexdiscrete/vis_corex.py'...
***   File "./lib/python3.5/site-packages/corexdiscrete/corexdiscrete/vis_corex.py", line 25
    print 'Groups in sorted_groups.txt'
                                      ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/corextext'...
Compiling './lib/python3.5/site-packages/corextext/corex_text.py'...
***   File "./lib/python3.5/site-packages/corextext/corex_text.py", line 33
    model: typing.Union[Corex, None]
         ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/corextext/corextext'...
Compiling './lib/python3.5/site-packages/corextext/corextext/vis_topic.py'...
***   File "./lib/python3.5/site-packages/corextext/corextext/vis_topic.py", line 33
    print 'Print topics in text file'
                                    ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/corextext-0.2.0.egg-info'...
Listing './lib/python3.5/site-packages/dsbox-corex'...
Listing './lib/python3.5/site-packages/dsbox-corex/corextext'...
Listing './lib/python3.5/site-packages/dsbox-corex/corextext/corextext'...
Compiling './lib/python3.5/site-packages/dsbox-corex/corextext/corextext/vis_topic.py'...
***   File "./lib/python3.5/site-packages/dsbox-corex/corextext/corextext/vis_topic.py", line 33
    print 'Print topics in text file'
                                    ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/dsbox-corex/primitive_interfaces'...
Listing './lib/python3.5/site-packages/dsbox-corex/primitive_interfaces/types'...
Listing './lib/python3.5/site-packages/linearcorex'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/primitive_interfaces'...
Listing './lib/python3.5/site-packages/primitive_interfaces/types'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
